<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_info">

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.finalproject.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_lectures"
        android:name="com.example.finalproject.ui.lectures.LecturesFragment"
        android:label="@string/title_lectures"
        tools:layout="@layout/fragment_lectures" />

    <fragment
        android:id="@+id/navigation_picked"
        android:name="com.example.finalproject.ui.picked.PickedFragment"
        android:label="@string/title_picked"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.finalproject.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />
</navigation>