<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoFragment"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginBottom="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:background="@color/purple_700">

        <TextView
            android:id="@+id/info_schedule"
            android:text="@string/info_schedule"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/info_schedule_detail"
            android:text="@string/info_schedule_detail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/info_schedule_btn"
            android:text="@string/info_schedule_btn"
            android:drawableLeft="@drawable/planner_icon_fit"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:paddingHorizontal="50dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:backgroundTint="@color/teal_500"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="4">

        <TextView
            android:id="@+id/info_statement"
            android:text="@string/info_statement"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_weight="0.6"/>

        <LinearLayout
            style="@style/infoCardView"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1">
            <include
                android:id="@+id/user_info"
                layout="@layout/user_info"/>
        </LinearLayout>

        <LinearLayout
            style="@style/infoCardView"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1">
            <TextView
                android:id="@+id/info_notice"
                android:text="@string/info_notice"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/notice_icon_fit"
                android:drawableTint="@color/white"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textSize="17sp"
                android:gravity="left|center"/>
            <TextView
                android:id="@+id/info_notice_content"
                android:text="동시 접속은 불가입니다."
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="left|center"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>