<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/main_mju"
        android:drawableLeft="@drawable/mju_logo_fit"
        android:drawablePadding="10dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/login_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="5dp"
        android:drawableLeft="@drawable/user_icon_fit"
        android:drawablePadding="8dp"
        android:hint="@string/login_id"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/lock_icon_fit"
        android:drawablePadding="8dp"
        android:hint="@string/login_password"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="@+id/login_id"
        app:layout_constraintBottom_toTopOf="@+id/login_btn" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintBottom_toTopOf="@+id/remember_id_btn"
        android:text="로그인" />

    <RadioButton
        android:id="@+id/remember_id_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Saved ID"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_info"
        app:layout_constraintStart_toStartOf="@+id/login_btn" />

    <TextView
        android:id="@id/login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:text="@string/login_info"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_btn" />





</androidx.constraintlayout.widget.ConstraintLayout>